# ferrox

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  s3_compat_gap.yml
.github/workflows/: ci.yml  docs.yml  health.yml  labeler.yml  release.yml  stale.yml
crates/ferrox-cli/: Cargo.toml  build.rs
crates/ferrox-cli/src/: lib.rs
crates/ferrox-crypto/: Cargo.toml
crates/ferrox-crypto/src/: lib.rs  sse_c.rs
crates/ferrox-error/: Cargo.toml
crates/ferrox-error/src/: lib.rs
crates/ferrox-gateway/: Cargo.toml
crates/ferrox-gateway/benches/: sigv4_bench.rs
crates/ferrox-gateway/src/: admin.rs  error.rs  lib.rs  metrics.rs  notify.rs  ratelimit.rs  router.rs  state.rs
crates/ferrox-gateway/src/auth/: mod.rs  sigv4.rs  sigv4a.rs  verifier.rs
crates/ferrox-gateway/src/handlers/: bucket.rs  cors.rs  dispatch.rs  encryption.rs  health.rs  mod.rs  multipart.rs  notification.rs  object.rs  preflight.rs  tagging.rs
crates/ferrox-gateway/src/middleware/: auth.rs  mod.rs  normalize.rs  request_id.rs
crates/ferrox-gateway/tests/: auth_tests.rs  bucket_tests.rs  get_head_tests.rs  multipart_list_tests.rs  multipart_tests.rs  presigned_tests.rs  put_object_tests.rs  sse_tests.rs  versioning_tests.rs
crates/ferrox-iam/: Cargo.toml
crates/ferrox-iam/src/: lib.rs
crates/ferrox-meta/: Cargo.toml
crates/ferrox-meta/benches/: sled_bench.rs
crates/ferrox-meta/src/: lib.rs  rocks_store.rs  sled_store.rs  types.rs
crates/ferrox-s3-api/: Cargo.toml
crates/ferrox-s3-api/src/: error.rs  lib.rs  names.rs  xml.rs
crates/ferrox-storage/: Cargo.toml
crates/ferrox-storage/src/: disk.rs  erasure.rs  lib.rs  types.rs
docs/: book.toml
docs/adr/: 001-sled-default-rocksdb-optional.md  002-rustls-only.md  003-erasure-coding.md
docs/community/: discord_welcome.md
docs/launch/: benchmark_results.json  show_hn.md
docs/src/: README.md  SUMMARY.md
docs/src/api/: buckets.md  multipart.md  objects.md  sigv4.md
docs/src/architecture/: adr.md  benchmarks.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/operations/: docker.md  kubernetes.md  observability.md  terraform.md
docs/src/security/: encryption.md  iam.md  tls.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_object_key_validator.rs  fuzz_sigv4_parser.rs  fuzz_xml_request_parser.rs
helm/ferrox/: Chart.yaml  values.yaml
helm/ferrox/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
scripts/bench/: wrk_bench.sh  wrk_put.lua
terraform/examples/single-node-aws/: README.md  main.tf  variables.tf
terraform/modules/ferrox-aws/: main.tf  outputs.tf  user_data.sh.tftpl  variables.tf
terraform/modules/ferrox-k8s/: main.tf  variables.tf
tests/integration/: test_boto3.py  test_rclone.sh
