[workspace]
members = [
    "crates/ferrox-error",
    "crates/ferrox-crypto",
    "crates/ferrox-iam",
    "crates/ferrox-meta",
    "crates/ferrox-storage",
    "crates/ferrox-s3-api",
    "crates/ferrox-gateway",
    "crates/ferrox-cli",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ferrox-rs/ferrox"
authors = ["Ferrox Contributors"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime + HTTP
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit", "normalize-path"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "http1", "http2"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
quick-xml = { version = "0.36", features = ["serialize"] }

# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI / config
clap = { version = "4.3", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = "0.15"

# Crypto / encoding
ring = "0.17"
aes-gcm = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
crc32c = "0.6"
hex = "0.4"
base64 = "0.22"
percent-encoding = "2"
url = "2.4"

# Time / IDs
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Storage backends
sled = "0.34"

# TLS (Phase 1+) — use ring backend (same as SigV4) to avoid aws-lc-sys C build
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"

# Metrics + rate limit
prometheus = "0.13"
governor = "0.7"
dashmap = "6"
nonzero_ext = "0.3"

# Test deps
tempfile = "3"
wiremock = "0.6"
criterion = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Internal crates (path deps; version optional for workspace members)
ferrox-error    = { path = "crates/ferrox-error" }
ferrox-crypto   = { path = "crates/ferrox-crypto" }
ferrox-iam      = { path = "crates/ferrox-iam" }
ferrox-meta     = { path = "crates/ferrox-meta" }
ferrox-storage  = { path = "crates/ferrox-storage" }
ferrox-s3-api   = { path = "crates/ferrox-s3-api" }
ferrox-gateway  = { path = "crates/ferrox-gateway" }

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
