[package]
name = "ferrox-crypto"
description = "Cryptographic primitives for Ferrox: SSE-S3, checksums, key management."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ferrox-error = { workspace = true }
aes-gcm = { workspace = true }
ring    = { workspace = true }
hex     = { workspace = true }
hmac    = { workspace = true }
sha2    = { workspace = true }
md-5    = { workspace = true }
base64  = { workspace = true }
zeroize = { version = "1.7", features = ["derive"] }
