[package]
name = "ferrox-error"
description = "Shared error types for the Ferrox object storage server."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
