[package]
name = "ferrox-gateway"
description = "HTTP gateway for Ferrox: SigV4 auth, routing, S3 handlers."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ferrox-error   = { workspace = true }
ferrox-iam     = { workspace = true }
ferrox-meta    = { workspace = true }
ferrox-storage = { workspace = true }
ferrox-s3-api  = { workspace = true }
ferrox-crypto  = { workspace = true }

axum         = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
hyper         = { workspace = true }
http          = { workspace = true }
http-body     = { workspace = true }
http-body-util = { workspace = true }
bytes         = { workspace = true }
futures       = { workspace = true }
async-trait   = { workspace = true }
tokio         = { workspace = true }
tokio-util    = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
quick-xml  = { workspace = true }

thiserror = { workspace = true }
tracing   = { workspace = true }

ring             = { workspace = true }
hex              = { workspace = true }
percent-encoding = { workspace = true }
url              = { workspace = true }
sha2             = { workspace = true }
md-5             = { workspace = true }
hmac             = { workspace = true }
base64           = { workspace = true }
crc32c           = { workspace = true }
p256             = { workspace = true }
elliptic-curve   = { workspace = true }

time   = { workspace = true }
chrono = { workspace = true }
uuid   = { workspace = true }

prometheus  = { workspace = true }
governor    = { workspace = true }
dashmap     = { workspace = true }
nonzero_ext = { workspace = true }
reqwest     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
ferrox-meta = { workspace = true }
ferrox-storage = { workspace = true }
ring = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true }
p256 = { workspace = true }

[[bench]]
name = "sigv4_bench"
harness = false
