[package]
name = "ferrox-iam"
description = "Identity, access keys, and policy evaluation for Ferrox."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ferrox-error = { workspace = true }
