[package]
name = "ferrox-meta"
description = "Metadata store abstraction for Ferrox (sled default)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ferrox-error = { workspace = true }

async-trait = { workspace = true }
serde       = { workspace = true }
bincode     = { workspace = true }
sled        = { workspace = true }
time        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

# Optional RocksDB backend (Phase 3 Step 37). Off by default — enabling it
# requires a C++ toolchain. Toggle with `cargo build --features rocksdb`.
rocksdb     = { version = "0.22", optional = true, default-features = false, features = ["snappy"] }

[features]
default = []
rocksdb = ["dep:rocksdb"]

[dev-dependencies]
tempfile  = { workspace = true }
tokio     = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "sled_bench"
harness = false
