[package]
name = "ferrox-s3-api"
description = "AWS S3 wire types: XML serialization, error envelopes, validators."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ferrox-error = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
quick-xml  = { workspace = true }
time       = { workspace = true }
thiserror  = { workspace = true }
